<!--
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
  -->

<resources>
    <string name="app_name">twoyi</string>
    <string name="booting_tips">Booting twoyi…</string>
    <string name="extracting_tips">twoyi is initializing…</string>
    <string name="first_boot_tips">The first boot is a little slow, please wait…</string>
    <string name="first_boot_tips2">The initialization is normal, please be patient:)</string>
    <string name="first_boot_tips3">Initialization is about to complete, please wait…</string>
    <string name="boot_failed">Twoyi boot timeout!</string>
    <string name="about_btn">About</string>
    <string name="copy_right" translatable="false">Copyright © %1$d</string>
    <string name="help_text">Help</string>
    <string name="check_update">Check update</string>
    <string name="about_follow_gongzhonghao">Follow WeChat Public Account</string>
    <string name="wechat_public_account_tips">The number has copied to clipboard, please search and follow it.</string>
    <string name="about_author">Author: weishu (Contact me)</string>
    <string name="about_page_website">Official website</string>
    <string name="privacy">Privacy</string>
    <string name="about_feedback_qq_title">QQ Group (Click to join)</string>
    <string name="about_author_github" translatable="false">Github(tiann)</string>
    <string name="about_author_zhihu">Zhihu(weishu)</string>
    <string name="about_author_xda" translatable="false">XDA(weishu)</string>
    <string name="about_author_coolapk">Coolapk(weishu)</string>
    <string name="about_author_email">Email me</string>
    <string name="about_author_contact">Contact me</string>
    <string name="about_telegram_group">Telegram group</string>
    <string name="i_know_it">I know it</string>
    <string name="progress_dialog_title">Please wait</string>

    <string name="donate_alipay">Alipay</string>
    <string name="donate_others">Other way</string>
    <string name="donate_choose_title">Choose donate way</string>
    <string name="prompt_alipay_not_found">Alipay not found.</string>
    <string name="donate_confirm">Donate</string>
    <string name="donate_never_show">Don\'t show again</string>

    <string name="app_guide_title">Important tips</string>
    <string name="about_feedback_title">TwoYi feedback</string>
    <string name="feedback_confirm">If you encountered some problems, please read the FAQ first! If you have some feature request, just contact me.</string>
    <string name="feedback_ok">Go to feedback</string>
    <string name="read_faq_text">Read FAQ</string>
    <string name="menu_not_show_system">Don\'t show system apps</string>
    <string name="menu_not_show_added">Don\'t show apps which has been added</string>
    <string name="select_app_button">Import App</string>
    <string name="create_app_no_apps">No apps to add, please give twoyi the necessary permission.</string>
    <string name="create_app_all_apps_added">All apps have been added :)</string>
    <string name="select_app_app_not_found">Can not found the specified package.</string>
    <string name="select_app_tips">Please select app you want to create</string>
    <string name="create_app_activity">Import App</string>
    <string name="check_file_invlid_apk">Can not parse the APK file!</string>
    <string name="check_file_create_self_tip">Boy, your idea is promising :)</string>
    <string name="import_app_from_file">Import app from APK</string>
    <string name="unsupported_for_32bit_app">32 bit app is not supported :(</string>
    <string name="please_install_one_by_one">Please install app one by one!</string>
    <string name="install_success">Install success!</string>
    <string name="install_failed">Install failed: %1$s</string>
    <string name="title_settings">Settings</string>
    <string name="settings_key_about">About</string>
    <string name="settings_key_import_app">Import App</string>
    <string name="settings_import_summary">Import apps from outside system</string>
    <string name="settings_key_donate">Donate</string>
    <string name="settings_donate_summary">Donate to make twoyi better :)</string>
    <string name="install_failed_reason">install failed: %1$s</string>
    <string name="look_it">Read it</string>
    <string name="tips_for_android12">You are running on Android 12, please follow the guide to use twoyi.</string>
    <string name="settings_key_sendlog">Send Log</string>
    <string name="settings_sendlog_summary">Share the exception log to developer</string>
    <string name="sdcard_of_twoyi">sdcard of twoyi</string>
    <string name="confirm_for_android12" >Make sure you\'ve followed the tutorial to set it up!!Otherwise the system may fail to boot!!!</string>
    <string name="i_confirm_it">I confirm it</string>
    <string name="menu_not_show_32bit">Don\'t show 32bit apps</string>
    <string name="settings_key_replace_rom">Replace ROM</string>
    <string name="settings_replace_rom_summary">Boot twoyi with your custom ROM</string>
    <string name="replace_rom_invalid">The ROM is not a valid ROM :(</string>
    <string name="replace_rom_confirm_title">ROM confirm</string>
    <string name="replace_rom_confirm_message">ROM author: %1$s\nROM version: %2$s\nROM desc: %3$s\n\n the ROM will be replaced in next boot.</string>
    <string name="settings_category_basic">Basic</string>
    <string name="settings_category_advanced">Advanced</string>
    <string name="settings_category_other">Other</string>
    <string name="settings_key_factory_reset">Factory Reset</string>
    <string name="settings_factory_reset_summary">Boot twoyi with official internal ROM (data will be kept)</string>
    <string name="settings_key_wipe_all_data">Wipe all data</string>
    <string name="settings_wipe_all_data_summary">All data in twoyi will be wiped</string>
    <string name="factory_reset_confirm_message">Factory reset will reset the ROM in twoyi to initial state, the third party ROM will be replaced, data will be kept, continue?</string>
    <string name="settings_key_manage_files">File Manager</string>
    <string name="settings_export_summary">Import/Export files in twoyi</string>
    <string name="settings_key_shutdown">Shutdown</string>
    <string name="settings_key_reboot">Reboot</string>
    <string name="replace_rom_unofficial_tips">Sorry, please edit the rom info and avoid using official author name :)</string>
</resources>
